Fixing spacing between inputs in fundings

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -3335,7 +3335,8 @@ p.orcid-id-container{
 }
 
 .funding-info{
-	width: 100%;	
+	width: 100%;
+	float: left;	
 }
 
 #currencyCode {
@@ -5779,6 +5780,13 @@ hr{
 
 .action-icon-inside{
 	padding-right: 25px !important; /* Overwriting global reset styling */
+}
+
+input.form-control,
+select.form-control,
+textarea.form-control,
+.form-group div>select{
+	margin-bottom: 0px; 
 }
 
 /* Media Queries */
